# paper-radar

./: .gitignore  README.md  pyproject.toml
paper_radar/: __init__.py  server.py
