[project]
name = "paper-radar"
version = "0.1.0"
description = "An MCP server that fetches the latest papers in your field via Europe PMC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
paper-radar = "paper_radar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_radar"]
